Added some styles to the page

--- a/index.html
+++ b/index.html
@@ -2,28 +2,29 @@
 <html lang="en">
   <head>
     <title>FCC: JavaScript Documentation</title>
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <meta charset="utf-8" />
   </head>
 
   <body>
     <div id="header">
       <h1>JS Documentation</h1>
-      <a class="left" href="#introduction">Introduction</a><br />
-      <a class="left" href="#things to know">What you should already know</a
-      ><br />
-      <a class="left" href="#java">JavaScript and Java</a><br />
-      <a class="left" href="#hello">Hello World</a><br />
-      <a class="left" href="#variables">Variables</a><br />
-      <a class="left" href="#declare">Declaring variables</a><br />
-      <a class="left" href="#scope">Variable scope</a><br />
-      <a class="left" href="#global">Global variables</a><br />
-      <a class="left" href="#constant">Constant</a><br />
-      <a class="left" href="#data">Data type</a><br />
-      <a class="left" href="#else">If...else statement</a><br />
-      <a class="left" href="#while">While statement</a><br />
-      <a class="left" href="#functions">Functions</a><br />
-      <a class="left" href="#references">References</a>
+      <ul>
+        <li><a class="left" href="#introduction">Introduction</a></li>
+        <li><a class="left" href="#things to know">What you should already know</a></li>
+        <li><a class="left" href="#java">JavaScript and Java</a></li>
+        <li><a class="left" href="#hello">Hello World</a></li>
+        <li><a class="left" href="#variables">Variables</a></li>
+        <li><a class="left" href="#declare">Declaring variables</a></li>
+        <li><a class="left" href="#scope">Variable scope</a></li>
+        <li><a class="left" href="#global">Global variables</a></li>
+        <li><a class="left" href="#constant">Constant</a></li>
+        <li><a class="left" href="#data">Data type</a></li>
+        <li><a class="left" href="#else">If...else statement</a></li>
+        <li><a class="left" href="#while">While statement</a></li>
+        <li><a class="left" href="#functions">Functions</a></li>
+        <li><a class="left" href="#references">References</a></li>
+      </ul>
     </div>
     <div id="sections">
       <section id="introduction">
